# codebase_django

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  compose.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: main.yml
app/: asgi.py  constants.py  urls.py  wsgi.py
app/contrib/: config.py  constants.py  error_code.py  exception.py  pagination.py
app/contrib/health_check/: middleware.py  throttling.py
app/contrib/request_logging/: logger.py  middleware.py
app/contrib/security/: middleware.py  throttling.py
app/django/: exception.py  pagination.py  serializers.py
app/message/: errors.py
app/settings/: __init__.py  common.py  docker.py  local.py  local_test.py  production.py  staging.py  testing.py
app/utils/: config.py  validators.py
apps/api_doc/: __init__.py  apps.py  urls.py
apps/api_doc/docs/: __init__.py
apps/apidocs/: __init__.py  apps.py  urls.py
apps/apidocs/docs/: __init__.py
docker/python/: Dockerfile
locale/vi/LC_MESSAGES/: django.mo  django.po
tests/: README.md
tests/app/: test_asgi.py  test_config.py  test_manage.py  test_wsgi.py
tests/app/contrib/: test_exception.py
tests/app/contrib/health_check/: test_middleware.py
tests/app/contrib/request_logging/: test_middleware.py
tests/app/contrib/security/: test_middleware.py
tests/app/django/: test_exception.py
tests/app/middlewares/: test_dumper.py  test_healthcheck.py  test_request_logging.py  test_security.py
tests/apps/api_doc/: test_api_doc_urls.py  test_request_body_validation_error_example.py
tests/apps/apidocs/: test_api_doc_urls.py
